Add chana masala recipe link to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>
             Odin Recipes
         </h1>
-        
+        <a href="recipes/chana-masala.html">
+            Chana Masala
+        </a>
     </body>
 </html>
