Add chana masala photo and description to recipe page

--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -10,5 +10,19 @@
         <h1>
             Chana Masala
         </h1>
+        <img src="https://www.allrecipes.com/thmb/VBfIEg33woGzNjn7TZYVU8jXld8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/236564-chana-masala-savory-indian-chick-peas-3x4-672-copy-63ae3db5114644419c313cd0e479c9dd.jpg" alt="Chana Masala Image">
+        <p>
+            <h2>
+            Description
+            </h2>
+            Chana masala, chole masala, or chole is a chickpea curry originating in the Indian subcontinent. It is a staple dish in North Indian cuisine.
+        </p>
+        <p>
+            <h2>
+                Ingredients
+            </h2>
+        </p>
+
+
     </body>
 </html>
