--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -21,6 +21,23 @@
             <h2>
                 Ingredients
             </h2>
+            <ul>
+                <li>1 onion, chopped</li>
+                <li>1 tomato, chopped</li>
+                <li>1 (1 inch) piece fresh ginger, peeled and chopped</li>
+                <li>4 cloves garlic, chopped, or more to taste</li>
+                <li>1 green chile pepper, seeded and chopped (Optional)</li>
+                <li>3 tablespoons olive oil</li>
+                <li>2 fresh bay leaves</li>
+                <li>1 teaspoon chili powder</li>
+                <li>1 teaspoon coriander powder</li>
+                <li>1 teaspoon garam masala</li>
+                <li>½ teaspoon turmeric powder</li>
+                <li>1 pinch salt to taste</li>
+                <li>water as needed</li>
+                <li>1 (15 ounce) can chickpeas</li>
+                <li>1 teaspoon fresh cilantro leaves, for garnish, or more to taste</li>
+            </ul>
         </p>
 
 
