--- a/recipes/chana-masala.html
+++ b/recipes/chana-masala.html
@@ -39,7 +39,17 @@
                 <li>1 teaspoon fresh cilantro leaves, for garnish, or more to taste</li>
             </ul>
         </p>
-
-
+        <p>
+            <h2>
+                Steps
+            </h2>
+            <ol>
+                <li>Grind onion, tomato, ginger, garlic, and chile pepper together in a food processor into a paste.</li>
+                <li>Heat olive oil in a large skillet over medium heat. Fry bay leaves in hot oil until fragrant, about 30 seconds.</li>
+                <li>Pour the paste into the skillet and cook until the oil begins to separate from the mixture and is golden brown in color, 2 to 3 minutes.</li>
+                <li>Season the mixture with chili powder, coriander, gram masala, turmeric, and salt; cook and stir until very hot, 2 to 3 minutes.</li>
+                <li>Stir enough water into the mixture to get a thick gravy; bring to a boil and stir chickpeas into the gravy. Reduce heat to medium and cook until the chickpeas are heated through, 5 to 7 minutes. Garnish with cilantro.</li>
+            </ol>
+        </p>
     </body>
 </html>
