--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
         <h1>
             Odin Recipes
         </h1>
-        <a href="recipes/chana-masala.html">
+        <ul>
+        <li>
+            <a href="recipes/chana-masala.html">
             Chana Masala
-        </a>
-        <a href="recipes/indian-saag.html">
+            </a> 
+        </li>
+        <li>
+            <a href="recipes/indian-saag.html">
             Indian Saag
-        </a>
+            </a>
+        </li>
+        <li>
+            <a href="recipes/indian-chapati.html">
+            Indian Chapati    
+            </a>
+        </li>
+        </ul>
     </body>
 </html>
