Add ingredients to indian chapati recipe page

--- a/recipes/indian-chapati.html
+++ b/recipes/indian-chapati.html
@@ -15,7 +15,16 @@
             Description
         </h2>
         Chapati is an unleavened flatbread originating from the Indian subcontinent and staple in India, Nepal, Bangladesh, Pakistan, Sri Lanka, East Africa, Arabian Peninsula and the Caribbean.
-        <h2></h2> 
+        <h2>
+            Ingredients
+        </h2>
+        <ul>
+            <li>1 cup whole wheat flour</li>
+            <li>1 cup all-purpose flour</li>
+            <li>1 teaspoon salt</li>
+            <li>¾ cup hot water or as needed</li>
+            <li>2 tablespoons olive oil</li>
+        </ul> 
 
     </body>
 </html>
